--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         }
         .navbar-brand {
             color: white !important;
-            font-size: 1.5rem;
+            font-size: 2rem;
+            font-family: "lobster", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            color: #4A8C8C;
         }
         .navbar-toggler {
             border-color: #white !important;
